@@ -30,13 +30,14 @@ view=View
 atomLabels=Atom Labels
 molecule=Molecule
 atomElectronegativities=Atom Electronegativities
+positive=positive
+negative=negative
 
 # molecule names
 ammonia=ammonia
 borane=borane
 boronTrifluoride=boron trifluoride
 carbonDioxide=carbon dioxide
-carbonMonoxide=carbon monoxide
 chloroform=chloroform
 difluoromethane=difluoromethane
 fluorine=fluorine
