@@ -21,6 +21,8 @@ import edu.colorado.phet.moleculepolarity.common.view.MolecularDipoleNode;
 import edu.colorado.phet.moleculepolarity.common.view.NegativePlateNode;
 import edu.colorado.phet.moleculepolarity.common.view.PartialChargeNode;
 import edu.colorado.phet.moleculepolarity.common.view.PositivePlateNode;
+import edu.colorado.phet.moleculepolarity.common.view.SurfaceColorKeyNode.ElectronDensityColorKeyNode;
+import edu.colorado.phet.moleculepolarity.common.view.SurfaceColorKeyNode.ElectrostaticPotentialColorKeyNode;
 import edu.colorado.phet.moleculepolarity.common.view.TriatomicMoleculeNode;
 import edu.colorado.phet.moleculepolarity.common.view.ViewProperties;
 import edu.colorado.phet.moleculepolarity.common.view.ViewProperties.SurfaceType;
@@ -54,6 +56,8 @@ public class ThreeAtomsCanvas extends MPCanvas {
         PNode isosurfaceControlsNode = new ControlPanelNode( new SurfaceControlPanel( viewProperties.isosurfaceType ) );
         PNode eFieldControlsNode = new ControlPanelNode( new EFieldControlPanel( model.eField.enabled ) );
         PNode resetAllButtonNode = new MPResetAllButtonNode( new Resettable[] { model, viewProperties }, parentFrame );
+        final PNode electrostaticPotentialColorKeyNode = new ElectrostaticPotentialColorKeyNode();
+        final PNode electronDensityColorKeyNode = new ElectronDensityColorKeyNode();
 
         // rendering order
         {
@@ -69,6 +73,10 @@ public class ThreeAtomsCanvas extends MPCanvas {
             addChild( isosurfaceControlsNode );
             addChild( eFieldControlsNode );
             addChild( resetAllButtonNode );
+
+            // indicators
+            addChild( electrostaticPotentialColorKeyNode );
+            addChild( electronDensityColorKeyNode );
 
             // molecule
             addChild( electrostaticPotentialNode );
@@ -90,6 +98,8 @@ public class ThreeAtomsCanvas extends MPCanvas {
             enControlB.setOffset( enControlA.getFullBounds().getMaxX() + 10, enControlA.getYOffset() );
             enControlC.setOffset( enControlB.getFullBounds().getMaxX() + 10, enControlB.getYOffset() );
             positivePlateNode.setOffset( enControlC.getFullBounds().getMaxX() + xSpacing, negativePlateNode.getYOffset() );
+            electrostaticPotentialColorKeyNode.setOffset( 230, negativePlateNode.getFullBoundsReference().getMaxY() );
+            electronDensityColorKeyNode.setOffset( electrostaticPotentialColorKeyNode.getOffset() );
             viewControlsNode.setOffset( positivePlateNode.getFullBoundsReference().getMaxX() + xSpacing, positivePlateNode.getYOffset() );
             isosurfaceControlsNode.setOffset( viewControlsNode.getXOffset(), viewControlsNode.getFullBoundsReference().getMaxY() + ySpacing );
             eFieldControlsNode.setOffset( isosurfaceControlsNode.getXOffset(), isosurfaceControlsNode.getFullBoundsReference().getMaxY() + ySpacing );
@@ -122,7 +132,9 @@ public class ThreeAtomsCanvas extends MPCanvas {
             viewProperties.isosurfaceType.addObserver( new VoidFunction1<SurfaceType>() {
                 public void apply( SurfaceType isosurfaceType ) {
                     electrostaticPotentialNode.setVisible( isosurfaceType == SurfaceType.ELECTROSTATIC_POTENTIAL );
+                    electrostaticPotentialColorKeyNode.setVisible( electrostaticPotentialNode.getVisible() );
                     electronDensityNode.setVisible( isosurfaceType == SurfaceType.ELECTRON_DENSITY );
+                    electronDensityColorKeyNode.setVisible( electronDensityNode.getVisible() );
                 }
             } );
         }
